@@ -5,7 +5,6 @@ import java.util.Map;
 import java.util.ResourceBundle;
 import java.util.TreeMap;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.osgi.service.cm.ConfigurationAdmin;
 import org.osgi.service.component.ComponentContext;
@@ -173,7 +172,7 @@ public class HeatingElement extends AbstractOpenemsAppWithProps<HeatingElement, 
 						new int[] { 4, 5, 6 });
 				var options = values.app.componentUtil.getAllRelays() //
 						.stream().map(r -> r.relays).flatMap(List::stream) //
-						.collect(Collectors.toList());
+						.toList();
 				return new ChannelBundle(AbstractOpenemsApp.getTranslationBundle(values.language), relays, options);
 			};
 		}
@@ -237,7 +236,7 @@ public class HeatingElement extends AbstractOpenemsAppWithProps<HeatingElement, 
 	@Override
 	public AppDescriptor getAppDescriptor() {
 		return AppDescriptor.create() //
-				.setWebsiteUrl("https://fenecon.de/produkte/fems/fems-app-heizstab/") //
+				.setWebsiteUrl("https://fenecon.de/fenecon-fems/fems-app-power-to-heat/") //
 				.build();
 	}
 
